[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Linus Thiel <linus.thiel@bonniernews.se>"]
edition = "2018"

[dependencies]

[workspace]
members = [
    "day-1",
    "day-2",
    "day-3",
    "day-8",
    "day-9",
    "day-10",
    "day-12",
    "day-13",
    "day-14",
    "day-15",
    "day-16",
    "day-17",
    "day-21",
    "day-22",
    "day-23",
]

